force-app/main/default/objects/Delivery_Schedule__c/Delivery_Schedule__c.object-meta.xml
<CustomObject>
    <description>Deliver Schedules control the address and which days a publication will be delivered as part of the press run.</description>
    <label>Delivery Schedule</label>
    <nameField>
        <displayFormat>DS-{0}</displayFormat>
        <label>Delivery Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>