force-app/main/default/objects/Delivery_Schedule__c/fields/Account_Num__c.field-meta.xml
<CustomField>
        <fullName>Account_Num__c</fullName>
        <externalId>true</externalId>
        <label>Account#</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>