force-app/main/default/objects/Delivery_Schedule__c/fields/Contact_Browse_Id__c.field-meta.xml
<CustomField>
        <fullName>Contact_Browse_Id__c</fullName>
        <formula>subscription_Subscription__r.Contact__r.DSI_Person_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Browse Id</label>
        <type>Text</type>
    </CustomField>