force-app/main/default/objects/Delivery_Schedule__c/fields/Copies__c.field-meta.xml
<CustomField>
        <fullName>Copies__c</fullName>
        <label>Copies</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>