force-app/main/default/objects/Delivery_Schedule__c/fields/Created_in_DSI__c.field-meta.xml
<CustomField>
        <fullName>Created_in_DSI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in DSI</label>
        <type>Checkbox</type>
    </CustomField>