force-app/main/default/objects/Delivery_Schedule__c/fields/Customer_Notes__c.field-meta.xml
<CustomField>
        <fullName>Customer_Notes__c</fullName>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>