force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Friday__c.field-meta.xml
<CustomField>
        <fullName>Day_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </CustomField>