force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Monday__c.field-meta.xml
<CustomField>
        <fullName>Day_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </CustomField>