force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Saturday__c.field-meta.xml
<CustomField>
        <fullName>Day_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </CustomField>