force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Sunday__c.field-meta.xml
<CustomField>
        <fullName>Day_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </CustomField>