force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Thursday__c.field-meta.xml
<CustomField>
        <fullName>Day_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </CustomField>