force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Tuesday__c.field-meta.xml
<CustomField>
        <fullName>Day_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </CustomField>