force-app/main/default/objects/Delivery_Schedule__c/fields/Day_Wednesday__c.field-meta.xml
<CustomField>
        <fullName>Day_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </CustomField>