force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Delivery_Address__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>