force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Address_DSI_Id__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address_DSI_Id__c</fullName>
        <formula>Delivery_Address__r.DSI_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Address DSI Id</label>
        <type>Text</type>
    </CustomField>