force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Address_formula__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address_formula__c</fullName>
        <formula>HYPERLINK("/" &amp; Delivery_Address__r.Id ,  Full_Street__c )</formula>
        <label>Delivery Address</label>
        <type>Text</type>
    </CustomField>