force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Instructions__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Instructions__c</fullName>
        <label>Delivery Instructions</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>