force-app/main/default/objects/Delivery_Schedule__c/fields/DeliveryAddressStreet__c.field-meta.xml
<CustomField>
        <fullName>DeliveryAddressStreet__c</fullName>
        <formula>Delivery_Address__r.Address_House__c+" "+ Delivery_Address__r.Address_Street__c</formula>
        <label>Delivery Address Street</label>
        <type>Text</type>
    </CustomField>