force-app/main/default/objects/Delivery_Schedule__c/fields/District__c.field-meta.xml
<CustomField>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>108</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                </value>
                <value>
                    <fullName>117</fullName>
                </value>
                <value>
                    <fullName>118</fullName>
                </value>
                <value>
                    <fullName>119</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
                <value>
                    <fullName>127</fullName>
                </value>
                <value>
                    <fullName>148</fullName>
                </value>
                <value>
                    <fullName>218</fullName>
                </value>
                <value>
                    <fullName>245</fullName>
                </value>
                <value>
                    <fullName>252</fullName>
                </value>
                <value>
                    <fullName>255</fullName>
                </value>
                <value>
                    <fullName>366</fullName>
                </value>
                <value>
                    <fullName>367</fullName>
                </value>
                <value>
                    <fullName>368</fullName>
                </value>
                <value>
                    <fullName>392</fullName>
                </value>
                <value>
                    <fullName>399</fullName>
                </value>
                <value>
                    <fullName>492</fullName>
                </value>
                <value>
                    <fullName>495</fullName>
                </value>
                <value>
                    <fullName>499</fullName>
                </value>
                <value>
                    <fullName>593</fullName>
                </value>
                <value>
                    <fullName>608</fullName>
                </value>
                <value>
                    <fullName>609</fullName>
                </value>
                <value>
                    <fullName>612</fullName>
                </value>
                <value>
                    <fullName>613</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>