force-app/main/default/objects/Delivery_Schedule__c/fields/DSI_Household_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Household_Id__c</fullName>
        <formula>subscription_Subscription__r.subscription_Account__r.DSI_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI Household Id</label>
        <type>Text</type>
    </CustomField>