force-app/main/default/objects/Delivery_Schedule__c/fields/Error_Message__c.field-meta.xml
<CustomField>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>