force-app/main/default/objects/Delivery_Schedule__c/fields/Frequency_Code__c.field-meta.xml
<CustomField>
        <fullName>Frequency_Code__c</fullName>
        <formula>IF( Day_Monday__c = true &amp;&amp; Day_Tuesday__c = true &amp;&amp; Day_Wednesday__c = true &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "7 Day Delivery (Monday-Sunday)",

If(Day_Monday__c = true &amp;&amp; Day_Tuesday__c = true &amp;&amp; Day_Wednesday__c = true &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true, "Monday-Friday Delivery",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = false &amp;&amp; Day_Friday__c = false &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "Saturday-Sunday Delivery",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = false &amp;&amp; Day_Friday__c = false &amp;&amp; Day_Saturday__c = false &amp;&amp; Day_Sunday__c = true, "Sunday Only Delivery",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "Thursday-Sunday delivery","N/A" )

)
)))</formula>
        <label>Frequency Code</label>
        <type>Text</type>
    </CustomField>