force-app/main/default/objects/Delivery_Schedule__c/fields/Full_Street__c.field-meta.xml
<CustomField>
        <fullName>Full_Street__c</fullName>
        <formula>Delivery_Address__r.Address_Full_Street__c+" "+ Delivery_Address__r.Address_City__c+","+" "+ TEXT(Delivery_Address__r.Address_State__c)+" "+ Delivery_Address__r.Zip__c</formula>
        <label>Full Street</label>
        <type>Text</type>
    </CustomField>