force-app/main/default/objects/Delivery_Schedule__c/fields/Offer_Product__c.field-meta.xml
<CustomField>
        <fullName>Offer_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer Product</label>
        <referenceTo>Offer_Product__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>