force-app/main/default/objects/Delivery_Schedule__c/fields/Recurly_Subscription__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>recurly_v2__Recurly_Subscription__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>