force-app/main/default/objects/Delivery_Schedule__c/fields/Route__c.field-meta.xml
<CustomField>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>