force-app/main/default/objects/Delivery_Schedule__c/fields/Route_Service_Group__c.field-meta.xml
<CustomField>
        <fullName>Route_Service_Group__c</fullName>
        <label>Route Service Group</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>