force-app/main/default/objects/Delivery_Schedule__c/fields/Route_Type__c.field-meta.xml
<CustomField>
        <fullName>Route_Type__c</fullName>
        <label>Route Type</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>