force-app/main/default/objects/Delivery_Schedule__c/fields/Routelookup__c.field-meta.xml
<CustomField>
        <fullName>Routelookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>