force-app/main/default/objects/Delivery_Schedule__c/fields/Schedule_Code__c.field-meta.xml
<CustomField>
        <fullName>Schedule_Code__c</fullName>
        <formula>IF( Day_Monday__c = true &amp;&amp; Day_Tuesday__c = true &amp;&amp; Day_Wednesday__c = true &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "DS", 

If(Day_Monday__c = true &amp;&amp; Day_Tuesday__c = true &amp;&amp; Day_Wednesday__c = true &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true, "DF",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = false &amp;&amp; Day_Friday__c = false &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "SS",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = false &amp;&amp; Day_Friday__c = false &amp;&amp; Day_Saturday__c = false &amp;&amp; Day_Sunday__c = true, "SO",

If(Day_Monday__c = false &amp;&amp; Day_Tuesday__c = false &amp;&amp; Day_Wednesday__c = false &amp;&amp; Day_Thursday__c = true &amp;&amp; Day_Friday__c = true &amp;&amp; Day_Saturday__c = true &amp;&amp; Day_Sunday__c = true, "RS","N/A" )

)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Code</label>
        <type>Text</type>
    </CustomField>