force-app/main/default/objects/Delivery_Schedule__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
        <fullName>Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Address</label>
        <referenceTo>Shipping_Address__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </CustomField>