force-app/main/default/objects/Delivery_Schedule__c/fields/subscription_Subscription__c.field-meta.xml
<CustomField>
        <fullName>subscription_Subscription__c</fullName>
        <description>This fields lookups to the shadow object, Subscription</description>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </CustomField>