force-app/main/default/objects/Delivery_Schedule__c/listViews/Delivery_Schedule_with_Route.listView-meta.xml
<ListView>
        <fullName>Delivery_Schedule_with_Route</fullName>
        <columns>NAME</columns>
        <columns>Routelookup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Routelookup__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Delivery Schedule with Route</label>
    </ListView>